// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateDtsContentWithSourceMap change export type by namedExport 2`] = `
{
  version: 3,
  sources: ["1.css"],
  names: ["a", "b"],
  mappings: "AAAA;AAAA,E,SAAAA,G,SAAA;AAAA,E,SACAC,G,SADA;AAAA;AAAA",
  file: "1.css.d.ts",
  sourceRoot: "",
}
`;

exports[`generateDtsContentWithSourceMap change export type by namedExport 4`] = `
{
  version: 3,
  sources: ["1.css"],
  names: ["a", "b"],
  mappings: "AAAA;aAAAA,C,SAAA;aACAC,C,SADA",
  file: "1.css.d.ts",
  sourceRoot: "",
}
`;

exports[`generateDtsContentWithSourceMap emit other directory 2`] = `
{
  version: 3,
  sources: ["../src/1.css", "../1.css"],
  names: ["a"],
  mappings: "AAAA;AAAA,E,SCAAA,G,SDAA;AAAA;AAAA",
  file: "1.css.d.ts",
  sourceRoot: "",
}
`;

exports[`generateDtsContentWithSourceMap generate dts content with source map 1`] = `
"declare const styles: {
  readonly "d": string;
  readonly "c": string;
  readonly "a": string;
  readonly "b": string;
  readonly "b": string;
};
export = styles;
"
`;

exports[`generateDtsContentWithSourceMap generate dts content with source map 2`] = `
{
  version: 3,
  sources: ["1.css", "3.css", "2.css"],
  names: ["d", "c", "a", "b"],
  mappings: "AAAA;AAAA,E,SCAAA,G,SDAA;AAAA,E,SECAC,G,SFDA;AAAA,E,SACAC,G,SADA;AAAA,E,SAEAC,G,SAFA;AAAA,E,SAGAA,G,SAHA;AAAA;AAAA",
  file: "1.css.d.ts",
  sourceRoot: "",
}
`;
